figured out my img resixing issue and article spacing.

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   --clr-primary500: hsl(322, 100%, 66%);
   --clr-neutral100: hsl(193, 100%, 96%);
   --clr-neutral600: hsl(208, 11%, 55%);
-  -clr-neutral900: hsl(192, 100%, 9%);
+  --clr-neutral900: hsl(192, 100%, 9%);
 
   --fontWeight400: 400;
   --fontWeight600: 600;
@@ -105,13 +105,14 @@ header {
 
 main,
 footer {
-  padding: 1rem;
+  padding: 2rem;
 }
 
 main {
   display: grid;
   place-items: center;
-  gap: 3rem;
+  gap: 2rem;
+  padding-top: 4rem;
 }
 h1 {
   font-size: 2rem;
@@ -126,11 +127,18 @@ h2 {
 article {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   gap: 2rem;
   border-radius: 20px;
   box-shadow: 0.25rem 0.25rem 0.75rem rgb(201, 208, 216);
-  padding: 2.5rem;
+  padding: 3rem;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1.5rem;
 }
 
 button {
@@ -139,6 +147,15 @@ button {
   padding: 0.75rem 3rem;
   background-color: white;
   font-weight: var(--fontWeight600);
+}
+.actionButton {
+  background-color: var(--clr-primary500);
+  color: white;
+  font-weight: var(--fontWeight600);
+}
+
+.actionButton:hover {
+  background-color: hsl(322, 89%, 76%);
 }
 
 p {
@@ -150,38 +167,27 @@ p {
     background-image: url(images/bg-hero-desktop.svg);
   }
 
+  main,
+  footer {
+    padding: 4rem;
+  }
+
+  .hero,
   article {
     flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
   }
 
-  .flexArticle img {
+  .hero img,
+  article img {
     max-width: 40%;
   }
-}
-
-.actionButton {
-  background-color: var(--clr-primary500);
-  color: white;
-  font-weight: var(--fontWeight600);
-}
-
-.actionButton:hover {
-  background-color: hsl(322, 89%, 76%);
 }
 
 .flexNav {
   display: flex;
   justify-content: space-between;
-}
-
-.flexNav img {
-  max-width: 30%;
-}
-
-.hero {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
 }
 
 .gridGroup {
@@ -200,16 +206,6 @@ article .gridGroup p {
 }
 
 @media screen and (min-width: 45rem) {
-  .hero {
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-  }
-
-  .hero img {
-    max-width: 40%;
-  }
-
   .gridGroup {
     max-width: 40%;
     text-align: start;
@@ -227,4 +223,17 @@ article .gridGroup p {
     display: grid;
     place-items: center;
   }
+}
+
+footer {
+  background-color: var(--clr-neutral900);
+  color: white;
+}
+
+.footerImg {
+}
+
+.footerFlex {
+  display: flex;
+  gap: 1rem;
 }
